ImGUI Mouse/Key events added

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,21 @@ Size=52,71
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=650,20
-Size=550,680
+Pos=672,208
+Size=231,233
 Collapsed=0
+
+[Window][Example: Console]
+Pos=267,48
+Size=520,600
+Collapsed=0
+
+[Window][TEST]
+Pos=589,161
+Size=459,233
+Collapsed=0
+DockId=0x00000002,0
+
+[Docking][Data]
+DockNode  ID=0x00000002 Pos=649,244 Size=459,233
 
