--- a/imgui.ini
+++ b/imgui.ini
@@ -3,27 +3,23 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Test]
-Pos=60,60
-Size=52,71
-Collapsed=0
-
 [Window][Dear ImGui Demo]
-Pos=672,208
-Size=231,233
+Pos=68,87
+Size=1080,720
+Collapsed=0
+DockId=0x6F07E5B2,0
+
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1080,720
 Collapsed=0
 
-[Window][Example: Console]
-Pos=267,48
-Size=520,600
+[Window][Yeet]
+Pos=400,282
+Size=370,100
 Collapsed=0
-
-[Window][TEST]
-Pos=589,161
-Size=459,233
-Collapsed=0
-DockId=0x00000002,0
 
 [Docking][Data]
-DockNode  ID=0x00000002 Pos=649,244 Size=459,233
+DockSpace ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1080,701 CentralNode=1 Selected=0x0A2C5464
+DockSpace ID=0x6F07E5B2 Pos=68,87 Size=1080,720 CentralNode=1 Selected=0xE927CF2F
 
